--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Generate GitHub Snake
         uses: Platane/snk@v3
         with:
-          github_user_name: Rp-Info-Java
+          github_user_name: "Rp-Info-Java"
           outputs: |
             ./output/github-contribution-grid-snake.svg
             ./output/github-contribution-grid-snake-dark.svg
